# Nova-Engine

./: .gitignore  CMakeLists.txt  readme.md
include/: engine.h  window.h
include/entity/: camera.h  entity.h
include/render/: renderer.h  shader.h  texture.h
include/render/model/: model.h  resourceloader.h
include/util/: config.h  fileutils.h  mathutils.h  novalogger.h
resources/shaders/: default.frag  default.vert
src/: engine.c  main.c  window.c
src/entity/: camera.c  entity.c
src/render/: renderer.c  shader.c  texture.c
src/render/model/: model.c  resourceloader.c
src/util/: config.c  fileutils.c  mathutils.c  novalogger.c
